plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'swm.betterlife'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// mongodb
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// jjwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// oauth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// aws
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.261'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('copyConfig', Copy) {
	from './submodule-config/backend'
	include "*.yml"
	into './src/main/resources'
}

tasks.named('processResources') {
	dependsOn 'copyConfig'
}